// Copyright 2022 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package weetbix.v1;

option go_package = "infra/appengine/weetbix/proto/v1;weetbixpb";

import "infra/appengine/weetbix/proto/v1/project.proto";


// Provides methods to access the projects which are using Weetbix.
service Projects {

  // Lists Projects visible to the user.
  //
  // RPC compliant with https://google.aip.dev/132.
  // This RPC is incomplete. Future breaking changes are
  // expressly flagged.
  rpc List(ListProjectsRequest) returns (ListProjectsResponse) {};
}

// A request object with data to fetch the list of projects configured
// by Weetbix.
message ListProjectsRequest {}

// A response containing the list of projects which are are using Weetbix.
message ListProjectsResponse {

    // The list of projects using Weetbix.
    repeated Project projects = 1;
}
